...
        android:src="@drawable/insta_round_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_in_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"

        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:background="@drawable/outline_button"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:enabled="false"
        android:padding="13dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
