<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="Post" />

    <item
        android:id="@+id/navigation_trending_recipe"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Explore" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />

</menu>