<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.activity.SignUpActivity">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/insta_round_icon"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_up_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Full Name"
        android:textColorHint="@color/colorTextSecondary"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:textColorHint="@color/colorTextSecondary"
        android:padding="13dp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:textColorHint="@color/colorTextSecondary"
        android:padding="13dp"
        android:hint="Password (at least 5 character)"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:textColorHint="@color/colorTextSecondary"
        android:hint=" ConfirmPassword"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:background="@drawable/outline_button"
        android:enabled="false"
        android:drawablePadding="10dp"
        android:textColor="@color/goldenColor"
        android:elevation="3dp"
        android:padding="13dp"
        android:text="Register"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:padding="13dp"
        android:onClick="loginActivity"
        android:text="Already Registered?"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:onClick="loginActivity"
        android:padding="13dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/goldenColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/pb_sign_up"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/progress_bar"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_img"
         />


</androidx.constraintlayout.widget.ConstraintLayout>
